--- a/style1-10.css
+++ b/style1-10.css
@@ -64,3 +64,24 @@ footer {
   height: 50px;
   background-color: #aaaaaa;
 }
+
+@media screen and (max-width: 768px) {
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .box {
+    width: 90%;
+    margin: auto;
+  }
+
+  .box:nth-child(2) {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .box:last-child {
+    margin: auto;
+  }
+}
